<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"/>
    <TextView
    android:id="@+id/textEvent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/event" />

    <TextView
    android:id="@+id/textLocation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/location" />

    <TextView
    android:id="@+id/textStart"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/begin"
    />

</LinearLayout>